# gmchat

./: .gitignore  .railwayignore  ALCHEMY_SETUP.md  Anchor.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile.signaling  HYBRID_SETUP.md  IMPLEMENTATION_GUIDE.md  IPFS_SETUP.md  P2P_SETUP.md  QUICKSTART.md  QUICK_FIX.md  RAILWAY_SETUP.md  README-BASE-MINIAPP.md  README.md  SECURITY_IMPLEMENTATION.md  SEPARATE_REPO_GUIDE.md  SIGNALING_CLEAN_DEPLOY.md  SIGNALING_SERVER_DEPLOYMENT.md  WALLETCONNECT_SETUP.md  backend-api.js  backend.env  craco.config.js  database-secure-setup.sql  database-setup.sql  env.example  indexx.html  package-lock.json  package-signaling-clean.json  package.json  package.signaling.json  railway.json  relay-package.json  relay-server.js  signaling-README.md  signaling-index.js  signaling-package.json  signaling-server.js  simple-relay.js  (+4 more)
api/: health.js
api/ipfs/: upload.js
contracts/: P2PMessageAnchor.sol
programs/solana-messaging/: Cargo.toml
programs/solana-messaging/src/: lib.rs
relay-server/: docker-compose.yml  package-lock.json  relay-server.js
scripts/: setup.sh  start-dev.bat  start-dev.sh
src/: App.css  App.tsx  index.css  index.tsx  setupTests.js  test-p2p-real.js  test-p2p-simple.js  test-p2p.js  test-real-p2p.js
src/components/: AboutModal.tsx  AddContactModal.tsx  BaseMiniAppConversationView.tsx  BaseMiniAppHeader.tsx  BaseMiniAppWallet.tsx  BlockchainSelector.tsx  Captcha.tsx  CaptchaModal.tsx  ChainSelector.tsx  ContactList.tsx  ContactTagModal.tsx  ConversationView.tsx  CreateGroupModal.tsx  DatabaseTest.tsx  Header.tsx  (+20 more)
(+56 files in other folders)
